--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,13 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: <%= ENV.fetch('POSTGRES_DB') { 'okr-rails' } %>
+  username: <%= ENV.fetch('POSTGRES_USER') { 'okr-rails' } %>
+  host: <%= ENV.fetch('DB_HOST') { '127.0.0.1' } %>
+  port: <%= ENV.fetch('DB_PORT') { 5432 } %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD') { 'okr-rails' } %>
+  prepared_statements: false
+  pool: <%= ENV.fetch('THREADS') { 2 } * 2 %>
+  sslmode: <%= ENV.fetch('DB_SSL_MODE') {'prefer'} %>
+
